log/build_2022-11-16_19-58-20/mypkg/stderr.log
  File "/home/oda/RoboSys/ros2_ws/install/mypkg/lib/python3.6/site-packages/mypkg/listner.py", line 3
    from std_smgs.msg import Int 16
                                  ^
SyntaxError: invalid syntax

